--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,15 +2,17 @@
   "dependencies": {
     "com.meta.xr.mrutilitykit": "77.0.0",
     "com.meta.xr.sdk.core": "77.0.0",
-    "com.unity.collab-proxy": "2.2.0",
-    "com.unity.feature.development": "1.0.1",
-    "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.7.6",
+    "com.meta.xr.sdk.interaction.ovr": "77.0.0",
+    "com.meta.xr.sdk.interaction.ovr.samples": "69.0.1",
+    "com.unity.collab-proxy": "2.3.1",
+    "com.unity.feature.development": "1.0.2",
+    "com.unity.timeline": "1.8.6",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.10",
-    "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.9.1",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.visualscripting": "1.9.4",
     "com.unity.xr.management": "4.5.0",
-    "com.unity.xr.oculus": "4.2.0",
+    "com.unity.xr.openxr": "1.11.0",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
